; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/test/extr_test_smp.c_bt_rand.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/test/extr_test_smp.c_bt_rand.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i64)* @bt_rand to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bt_rand(i8* %0, i64 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i64 %1, i64* %4, align 8
  %7 = load i64, i64* %4, align 8
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %10, label %9

9:                                                ; preds = %2
  br label %32

10:                                               ; preds = %2
  %11 = load i8*, i8** %3, align 8
  %12 = load i64, i64* %4, align 8
  %13 = call i32 @memset(i8* %11, i32 85, i64 %12)
  store i32 0, i32* %5, align 4
  br label %14

14:                                               ; preds = %28, %10
  %15 = load i32, i32* %5, align 4
  %16 = load i64, i64* %4, align 8
  %17 = udiv i64 %16, 4
  %18 = trunc i64 %17 to i32
  %19 = icmp slt i32 %15, %18
  br i1 %19, label %20, label %31

20:                                               ; preds = %14
  %21 = call i32 (...) @esp_random()
  store i32 %21, i32* %6, align 4
  %22 = load i8*, i8** %3, align 8
  %23 = load i32, i32* %5, align 4
  %24 = sext i32 %23 to i64
  %25 = mul i64 %24, 4
  %26 = getelementptr i8, i8* %22, i64 %25
  %27 = call i32 @memcpy(i8* %26, i32* %6, i32 4)
  br label %28

28:                                               ; preds = %20
  %29 = load i32, i32* %5, align 4
  %30 = add nsw i32 %29, 1
  store i32 %30, i32* %5, align 4
  br label %14

31:                                               ; preds = %14
  br label %32

32:                                               ; preds = %31, %9
  ret void
}

declare dso_local i32 @memset(i8*, i32, i64) #1

declare dso_local i32 @esp_random(...) #1

declare dso_local i32 @memcpy(i8*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
